# JSON-Studio

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESCRIPTION.md  IMPLEMENTATION-PLAN.md  LICENSE  NOTICE  PERFORMANCE.md  PRIVACY.md  PROMOTION.md  README.md  RELEASE.md  ROADMAP.md  package.json  pad_file.xml  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/json-studio/: index.html  package.json  tsconfig.json  vite.config.ts
apps/json-studio/src/: App.tsx  lib.test.ts  main.tsx
apps/json-studio/src-tauri/: Cargo.toml  tauri.conf.json
apps/json-studio/src-tauri/capabilities/: default.json
apps/json-studio/src-tauri/icons/: icon.icns
apps/json-studio/src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs  recent.rs  settings.rs  state.rs
apps/json-studio/src/components/: ConfirmCloseModal.tsx  ErrorBoundary.tsx  ImagePreview.tsx  InfoModal.tsx  Logo.tsx  NodeContextMenu.tsx  PasteModal.tsx  QuitModal.tsx  RecentList.tsx  ReloadBanner.tsx  SearchPanel.tsx  SettingsModal.tsx  ShortcutsModal.tsx  StatusBar.tsx  Tabs.tsx  Toolbar.tsx  ViewSwitcher.tsx
apps/json-studio/src/hooks/: useCloseGuard.ts  useDragDrop.ts  useFileWatch.ts  useSessionPersistence.ts  useWindowedRows.ts
apps/json-studio/src/ipc/: commands.ts  openFile.ts
apps/json-studio/src/stores/: app.ts  settings.ts
apps/json-studio/src/styles/: app.css  tokens.css
apps/json-studio/src/views/: DiffView.tsx  JsonlView.tsx  QueryView.tsx  RawView.tsx  TreeView.tsx
examples/: sample.json
scripts/: gen-fixtures.mjs
